--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sistema de Horas Extras - Meet Tech</title>
+    <title>Sistema de Horas Extras - Wheel Tech</title>
     <style>
         * {
             margin: 0;
@@ -388,7 +388,7 @@
         <!-- Cabeçalho com Logo -->
         <div class="header">
             <div class="logo-container">
-                <div class="logo">Meet Tech</div>
+                <div class="logo">Wheel Tech</div>
                 <div class="logo-subtitle">BICYCLING</div>
             </div>
             
@@ -416,7 +416,7 @@
                 <button class="btn" onclick="fazerLogin()">Entrar no Sistema</button>
                 
                 <div style="text-align: center; margin-top: 20px; color: #58595B; font-size: 14px;">
-                    <strong>Meet Tech</strong> - Sistema interno corporativo
+                    <strong>Wheel Tech</strong> - Sistema interno corporativo
                 </div>
             </div>
 
