--- a/index.html
+++ b/index.html
@@ -559,7 +559,7 @@
         };
 
         // URL da sua planilha
-        const PLANILHA_URL = 'https://docs.google.com/spreadsheets/d/1zMa-RSRr53XpyVcaQu8WKvPZuqPKdseBNNZJNXUINmU/gviz/tq?tqx=out:json&sheet=Página1';
+        const PLANILHA_URL = 'https://docs.google.com/spreadsheets/d/1zMa-RSRr53XpyVcaQu8WKvPZuqPKdseBNNZJNXUINmU/edit?usp=sharing';
 
         let funcionarioLogado = null;
         let historico = JSON.parse(localStorage.getItem('historicoHorasExtras')) || {};
