--- a/index.html
+++ b/index.html
@@ -1563,7 +1563,7 @@
                 document.getElementById('senha').value = '';
                 
             } else {
-                alert('❌ Senha inválida! Tente: 2209, 1809, 3003, 0408, 2411, 2701, 1204');
+                alert('❌ Senha inválida!');
             }
         }
 
