--- a/index.html
+++ b/index.html
@@ -584,11 +584,11 @@
         const urgencySelect = document.getElementById('urgency');
         const osTableBody = document.getElementById('osTableBody');
 
-        // Usuários do sistema (em um sistema real, isso viria de um backend)
+        // Usuários do sistema - Elaine, Arthur e Laura
         const users = [
             { username: 'elaine', password: 'elaine123', name: 'Elaine', avatar: 'E' },
-            { username: 'vendas', password: 'vendas123', name: 'Vendas', avatar: 'V' },
-            { username: 'admin', password: 'admin123', name: 'Administrador', avatar: 'A' }
+            { username: 'arthur', password: 'arthur123', name: 'Arthur', avatar: 'A' },
+            { username: 'laura', password: 'laura123', name: 'Laura', avatar: 'L' }
         ];
 
         // Event Listeners
